--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SepWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SepWeb.data.gz",
-        frameworkUrl: buildUrl + "/SepWeb.framework.js.gz",
-        codeUrl: buildUrl + "/SepWeb.wasm.gz",
+        dataUrl: buildUrl + "/SepWeb.data",
+        frameworkUrl: buildUrl + "/SepWeb.framework.js",
+        codeUrl: buildUrl + "/SepWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SepSoluciones",
